--- a/node/package.json
+++ b/node/package.json
@@ -6,12 +6,9 @@
   "author": "mohamedtaarek <mtarek.22796@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "babel src -d dist --source-maps",
-    "clean": "rm -rf dist",
     "debug": "nodemon --exec babel-node --inspect-brk src/index.js ",
-    "serve": "node dist/index.js",
+    "serve": "node src/index.js",
     "start": "nodemon src/index.js --exec babel-node",
-    "test": "jest --runInBand --verbose",
     "coverage": "jest --coverage --runInBand --verbose",
     "eslint": "eslint src/**/*.js --ignore-pattern \"node_modules/\"",
     "lint": "eslint src --fix",
